[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/RedEnemy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/RedEnemy.gd" type="Script" id=2]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://HitandHurt/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://HitandHurt/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 50.9827

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6.5, 6.5 ), Vector2( 5, 5 ) ]
}

[node name="RedEnemy" type="KinematicBody2D"]
position = Vector2( 330.523, 225.397 )
scale = Vector2( 5, 5 )
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 3

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 5 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
